--- a/docs/guides/install-qiskit.mdx
+++ b/docs/guides/install-qiskit.mdx
@@ -236,9 +236,9 @@ Qiskit strives to support as many operating systems as possible, but due to limi
 
 Additionally, Qiskit only supports the CPython implementation of the Python language. Running with other Python interpreters such as PyPy is not supported.
 
-### Qiskit 2.x
+### Qiskit v2.x
 
-In the Qiskit 2.x release series the supported platforms are:
+In the Qiskit v2.x release series the supported platforms are:
 
 <details>
   <summary>
@@ -259,7 +259,7 @@ In the Qiskit 2.x release series the supported platforms are:
   <summary>
     Tier 2
   </summary>
-  Tier 2 operating systems are not tested as part of development process. However, pre-compiled binaries are built, tested, and published to PyPI as part of the release process and these packages can be expected to be installed with just a functioning Python environment.
+  Tier 2 operating systems are not tested as part of development process. However, pre-compiled binaries are built, tested, and published to PyPI as part of the release process and these packages can be expected to be installed with only a functioning Python environment.
 
   Tier 2 operating systems:
 
@@ -271,7 +271,7 @@ In the Qiskit 2.x release series the supported platforms are:
   <summary>
     Tier 3
   </summary>
-  Tier 3 operating systems are not tested as part of the development process. Pre-compiled binaries are built and published to PyPI as part of the release process but are not tested. They may not be installable with just a functioning Python environment and might require a C/C++ compiler or additional programs to build dependencies from source as part of the installation process. Support for these operating systems are best effort only.
+  Tier 3 operating systems are not tested as part of the development process. Pre-compiled binaries are built and published to PyPI as part of the release process but are not tested. They may not be installable with only a functioning Python environment and might require a C/C++ compiler or additional programs to build dependencies from source as part of the installation process. Support for these operating systems are best effort only.
 
   Tier 3 operating systems:
 
@@ -279,12 +279,12 @@ In the Qiskit 2.x release series the supported platforms are:
   - Linux s390x (distributions compatible with the [manylinux 2014](https://www.python.org/dev/peps/pep-0599/) packaging specification)
 </details>
 
-Starting in Qiskit 2.0.0 only 64 bit platforms are supported and 32 bit platforms are not supported. You will not be able to build from source
-on 32 bit platforms either, as internally the Qiskit Rust code assumes a 64 bit pointer width.
+Starting in Qiskit v2.0.0, only 64-bit platforms are supported and 32-bit platforms are not supported. You will not be able to build from source
+on 32-bit platforms either, as internally the Qiskit Rust code assumes a 64-bit pointer width.
 
-### Qiskit 1.x
+### Qiskit v1.x
 
-In the Qiskit 1.x release series the supported platforms are:
+In the Qiskit v1.x release series, the supported platforms are:
 
 <details>
   <summary>
