--- a/docs/migration-guides/index.mdx
+++ b/docs/migration-guides/index.mdx
@@ -19,6 +19,7 @@ These migration guides help you more effectively use Qiskit and Qiskit Runtime:
    * [Overview](./qiskit-runtime)
    * [Migrate from `qiskit-ibmq-provider`](./qiskit-runtime-from-ibmq-provider)
    * [Migrate from `qiskit_ibm_provider`](./qiskit-runtime-from-ibm-provider)
+   * [Migrate using backend primitives](./qiskit-backend-primitives)
    * [Migrate options](./qiskit-runtime-options)
    * [Common use cases](./qiskit-runtime-use-case)
    * [Examples](./qiskit-runtime-examples)
