--- a/docs/migration-guides/qiskit-runtime.mdx
+++ b/docs/migration-guides/qiskit-runtime.mdx
@@ -72,13 +72,18 @@ See these topics for instructions:
 -  [Update code that calculates expectation values](qiskit-runtime-examples#estimator-algorithm)
 -  [Common use cases (basic, parameterized, and dynamic circuits)](qiskit-runtime-use-case)
 
-
-### Step 3a: replace any `backend.run` options with `qiskit_ibm_runtime` options.
+### Step 3a: Replace any `backend.run` options with `qiskit_ibm_runtime` options.
 
 See the following topics for instructions:
 
 - [Migrate options](qiskit-runtime-options)
 - Common use cases [Options section](qiskit-runtime-use-case#migrate-options)
+
+### Step 3b: If you want to access a 3rd-party provider that only exposes `backend.run`, you can still follow a primitive-compatible your workflow using the Qiskti backend primitives.
+
+See the following topic for instructions:
+
+- [Migrate using backend primitives](qiskit-backend-primitives)
 
 ## Information to share with your users
 
