--- a/docs/migration-guides/qiskit-backend-primitives.mdx
+++ b/docs/migration-guides/qiskit-backend-primitives.mdx
@@ -20,8 +20,8 @@ For providers that don't expose native primitives, the Qiskit SDK offers wrapper
 used out-of the box: the [`BackendSamplerV2`.](/api/qiskit/qiskit.primitives.BackendSamplerV2) and 
 [`BackendEstimatorV2`](/api/qiskit/qiskit.primitives.BackendEstimatorV2) classes.
 
-If you are already familiar with the [`SamplerV2`](sampler-v2 "qiskit_ibm_runtime.SamplerV2") 
-and [`EstimatorV2`](estimator-v2 "qiskit_ibm_runtime.EstimatorV2") interfaces, the transition to 
+If you are already familiar with the [`SamplerV2`](/api/qiskit-ibm-runtime/sampler-v2) 
+and [`EstimatorV2`](/api/qiskit-ibm-runtime/estimator-v2)  interfaces, the transition to 
 [`BackendSamplerV2`.](/api/qiskit/qiskit.primitives.BackendSamplerV2) and 
 [`BackendEstimatorV2`](/api/qiskit/qiskit.primitives.BackendEstimatorV2) is seamless, as
 these classes follow the same usage patterns. The inputs to the primitives should follow 
