--- a/docs/migration-guides/qiskit-backend-primitives.mdx
+++ b/docs/migration-guides/qiskit-backend-primitives.mdx
@@ -29,13 +29,13 @@ the Primitive Unified Bloc (PUB) syntax, and the output formats will follow the
 V2 primitives standard. See the [Overview of PUBs section](/guides/primitive-input-output#pubs) in 
 the Primitive inputs and outputs guide for details.
 
-The two main differences with the implementations of [`SamplerV2`](sampler-v2 "qiskit_ibm_runtime.SamplerV2") 
-and [`EstimatorV2`](estimator-v2 "qiskit_ibm_runtime.EstimatorV2") are:
+The two main differences with the implementations of [`SamplerV2`](/api/qiskit-ibm-runtime/sampler-v2) 
+and [`EstimatorV2`](/api/qiskit-ibm-runtime/estimator-v2) are:
 
 1.  the `backend` input passed during the "backend primitive" instantiation. This input argument will allow to 
 internally wrap the access to the internal provider through `backend.run()` and it should not be confused
-with the `mode` input argument of [`SamplerV2`](sampler-v2 "qiskit_ibm_runtime.SamplerV2") 
-and [`EstimatorV2`](estimator-v2 "qiskit_ibm_runtime.EstimatorV2").
+with the `mode` input argument of [`SamplerV2`](/api/qiskit-ibm-runtime/sampler-v2) 
+and [`EstimatorV2`](/api/qiskit-ibm-runtime/estimator-v2).
 
 2. the use of `options`, which contains one more level of nesting compared to provider-specific primitives and
 is initially provided as a `dict` instead of an `Options` instance.
