--- a/docs/guides/install-qiskit.mdx
+++ b/docs/guides/install-qiskit.mdx
@@ -259,12 +259,7 @@ In the Qiskit v2.x release series the supported platforms are:
   <summary>
     Tier 2
   </summary>
-  Tier 2 operating systems are not tested as part of development process. However, pre-compiled binaries are built, tested, and published to PyPI as part of the release process and these packages can be expected to be installed with only a functioning Python environment.
-
-  Tier 2 operating systems:
-
-  -
-
+  *There are currently no Tier 2 operating systems.* Tier 2 operating systems are not tested as part of development process. However, pre-compiled binaries are built, tested, and published to PyPI as part of the release process and these packages can be expected to be installed with only a functioning Python environment.
 </details>
 
 <details>
