--- a/docs/guides/install-qiskit.mdx
+++ b/docs/guides/install-qiskit.mdx
@@ -238,7 +238,7 @@ Additionally, Qiskit only supports the CPython implementation of the Python lang
 
 ### Qiskit v2.x
 
-In the Qiskit v2.x release series the supported platforms are:
+In the Qiskit v2.x release series, the supported platforms are:
 
 <details>
   <summary>
