--- a/docs/migration-guides/qiskit-runtime.mdx
+++ b/docs/migration-guides/qiskit-runtime.mdx
@@ -64,24 +64,18 @@ Follow the steps in the appropriate topic to change your import options and othe
 - [Migrate from `qiskit-ibm-provider`](qiskit-runtime-from-ibm-provider)
 - [Migrate from `qiskit-ibmq-provider`](qiskit-runtime-from-ibmq-provider)
 
-### Step 3: Replace the call to `backend.run` with a call to `qiskit_ibm_runtime`.
+### Step 3: Replace the call to `backend.run` with a call to primitives.
 
-See these topics for instructions:
+See these topics for instructions if you are using `qiskit-ibm-runtime`:
 
 -  [Update code that performs circuit sampling](qiskit-runtime-examples#sampler-algorithm)
 -  [Update code that calculates expectation values](qiskit-runtime-examples#estimator-algorithm)
 -  [Common use cases (basic, parameterized, and dynamic circuits)](qiskit-runtime-use-case)
+-  Replace any `backend.run` options with `qiskit_ibm_runtime` options:
+    - [Migrate options](qiskit-runtime-options)
+    - Common use cases [Options section](qiskit-runtime-use-case#migrate-options)
 
-### Step 3a: Replace any `backend.run` options with `qiskit_ibm_runtime` options.
-
-See the following topics for instructions:
-
-- [Migrate options](qiskit-runtime-options)
-- Common use cases [Options section](qiskit-runtime-use-case#migrate-options)
-
-### Step 3b: If you want to access a 3rd-party provider that only exposes `backend.run`, you can still follow a primitive-compatible your workflow using the Qiskit backend primitives.
-
-See the following topic for instructions:
+See the following topic for instructions if you are using a 3rd-party provider that only exposes `backend.run`:
 
 - [Migrate using backend primitives](qiskit-backend-primitives)
 
