--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -18,6 +18,15 @@ This documentation is relevant to the new IBM Quantum&reg; Platform. If you need
 
 For FAQs specific to the execution modes, see the [Qiskit Runtime execution modes FAQ](/guides/execution-modes-faq) guide.
 
+## Trouble creating an IBM Cloud account
+
+If you get an error when you create an IBM Cloud&reg; account, first check whether you have access to the [Support center.](https://cloud.ibm.com/unifiedsupport/supportcenter)
+
+- If you do have access, click "create case", then select *Account* as the Topic and *Account verification* as the Subtopic.
+- If you do not have access, contact Support by calling 1-866-325-0045 and selecting the third option.
+
+See [Why is my account inactive?](https://cloud.ibm.com/docs/account?topic=account-ts_accnt_inactive) and [Why does a resource group error occur after reactivation or upgrade of a suspended account?](https://cloud.ibm.com/docs/account?topic=account-resource_inactive) for more information.
+
 ## How do I cite Qiskit in my research?
 
 Cite Qiskit by using the included [BibTeX file](https://github.com/Qiskit/qiskit/blob/main/CITATION.bib).
