--- a/docs/support.mdx
+++ b/docs/support.mdx
@@ -18,6 +18,17 @@ This documentation is relevant to the new IBM Quantum&reg; Platform. If you need
 
 ## Get help with Qiskit and IBM Quantum Platform
 
+<Admonition type="caution" title="Having trouble logging in?">
+
+If you get an error when you create an IBM Cloud&reg; account, first check whether you have access to the [Support center.](https://cloud.ibm.com/unifiedsupport/supportcenter)
+
+- If you do have access, click "create case", then select *Account* as the Topic and *Account verification* as the Subtopic.
+- If you do not have access, contact Support by calling 1-866-325-0045 and selecting the third option.
+
+See [Why is my account inactive?](https://cloud.ibm.com/docs/account?topic=account-ts_accnt_inactive) and [Why does a resource group error occur after reactivation or upgrade of a suspended account?](https://cloud.ibm.com/docs/account?topic=account-resource_inactive) for more information.
+
+</Admonition>
+
 | | |
 | --- | --- |
 | IBM Quantum&reg; Network members  | Reach out to IBM Quantum Support if you have technical difficulties, questions, or concerns. The primary way to contact support is through the IBM Cloud® Support Center by creating a case in the [Support Center](https://cloud.ibm.com/unifiedsupport/cases/form), and choosing 'Qiskit Runtime' in the Topic field. If you previously contacted support via email, you may continue to do so during Early Access to the new IBM Quantum Platform. If unsure, ask your administrator or IBM representative for IBM Quantum Support contact details. |
