--- a/docs/guides/primitives.mdx
+++ b/docs/guides/primitives.mdx
@@ -8,21 +8,16 @@ description: Introduction to primitives in Qiskit and Qiskit Runtime, and an exp
 
 ## Why does Qiskit use primitives?
 
-The `backend.run` interface was the primary access point to quantum hardware and simulators offered by IBM&reg;, as well as third-party providers that integrate with Qiskit. The evolution of user access patterns for quantum processing units (QPUs) led to the Qiskit primitives (`Sampler` and `Estimator`) superseding this interface.
-
-<span id="qpu-access-patterns"></span>
-### User access patterns for QPUs
-
 Similar to the early days of classical computers, when developers had to manipulate CPU registers directly, the early interface to QPUs simply returned the raw data from the control electronics.
 This was not a big issue when QPUs lived in labs and only allowed direct access by researchers.
-Acknowledging that most developers would not and should not be familiar with distilling such raw data into 0s and 1s, IBM&reg; introduced `backend.run`, a first abstraction for accessing QPUs in the cloud. This allowed developers
+Acknowledging that most developers would not and should not be familiar with distilling such raw data into 0s and 1s, Qiskit introduced `backend.run`, a first abstraction for accessing QPUs in the cloud. This allowed developers
 to operate on a familiar data format and focus on the bigger picture.
 
 As access to QPUs became more widespread, and with more quantum algorithms being developed,
-again the need for a higher-level abstraction emerged. In response, IBM introduced
-the Qiskit primitives interface, which is optimized for two core tasks in quantum algorithm development:
+again the need for a higher-level abstraction emerged. In response, Qiskit introduced
+the primitives interface, which is optimized for two core tasks in quantum algorithm development:
 expectation value estimation (`Estimator`) and circuit sampling (`Sampler`). The goal is once
-again to help developers to focus more on innovation and less on data conversion.
+again to help developers to focus more on innovation and less on data conversion. The primitives interface supersedes the `backend.run` interface, since `Sampler` provides the same direct hardware access that was offered by `backend.run`. 
 
 ## What is a primitive?
 
