--- a/docs/guides/primitives.mdx
+++ b/docs/guides/primitives.mdx
@@ -6,7 +6,7 @@ description: Introduction to primitives in Qiskit and Qiskit Runtime, and an exp
 
 # Introduction to primitives
 
-## Why does Qiskit use primitives?
+## Why did Qiskit introduce primitives?
 
 Similar to the early days of classical computers, when developers had to manipulate CPU registers directly, the early interface to QPUs simply returned the raw data from the control electronics.
 This was not a big issue when QPUs lived in labs and only allowed direct access by researchers.
