something strange happened and changes got reverted.

--- a/docs/guides/primitives.mdx
+++ b/docs/guides/primitives.mdx
@@ -2,10 +2,12 @@
 title: Introduction to primitives
 description: Introduction to primitives in Qiskit and Qiskit Runtime, and an explanation of available primitives
 
+
 ---
 
 # Introduction to primitives
 
+<span id="qpu-access-patterns"></span>
 ## Why did Qiskit introduce primitives?
 
 Similar to the early days of classical computers, when developers had to manipulate CPU registers directly, the early interface to QPUs simply returned the raw data from the control electronics.
@@ -17,7 +19,7 @@ As access to QPUs became more widespread, and with more quantum algorithms being
 again the need for a higher-level abstraction emerged. In response, Qiskit introduced
 the primitives interface, which is optimized for two core tasks in quantum algorithm development:
 expectation value estimation (`Estimator`) and circuit sampling (`Sampler`). The goal is once
-again to help developers to focus more on innovation and less on data conversion. The primitives interface supersedes the `backend.run` interface, since `Sampler` provides the same direct hardware access that was offered by `backend.run`. 
+again to help developers to focus more on innovation and less on data conversion. The primitives interface supersedes the `backend.run` interface, since `Sampler` provides the same direct hardware access that was offered by `backend.run`.
 
 ## What is a primitive?
 
